[gd_scene load_steps=6 format=2]

[ext_resource path="res://Resource/Theme.tres" type="Theme" id=1]
[ext_resource path="res://Resource/Wood_Theme.tres" type="Theme" id=2]
[ext_resource path="res://Assets/PIXELADE.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/Shop_Screen.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 75
outline_size = 5
outline_color = Color( 0.286275, 0.105882, 0.105882, 1 )
font_data = ExtResource( 3 )

[node name="Shop_Screen" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="BgDimmer" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.219608 )

[node name="ShopBox" type="Panel" parent="BgDimmer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 450.0
margin_top = 70.0
margin_right = -450.0
margin_bottom = -70.0
theme = ExtResource( 2 )

[node name="RichTextLabel" type="RichTextLabel" parent="BgDimmer/ShopBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 37.0
margin_top = 28.0
margin_right = -35.0
margin_bottom = -392.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]SHOP[/center]"
text = "SHOP"

[node name="RichTextLabel2" type="RichTextLabel" parent="BgDimmer/ShopBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 101.0
margin_right = -27.0
margin_bottom = -397.0
bbcode_enabled = true
bbcode_text = "[center]Price: 0"
text = "Price: 0"

[node name="VBoxContainer" type="VBoxContainer" parent="BgDimmer/ShopBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 136.0
margin_right = -20.0
margin_bottom = -60.0

[node name="Melee+" type="Button" parent="BgDimmer/ShopBox/VBoxContainer"]
margin_left = 15.0
margin_right = 244.0
margin_bottom = 90.0
rect_min_size = Vector2( 200, 75 )
size_flags_horizontal = 6
size_flags_vertical = 6
theme = ExtResource( 1 )
text = "INCREASE MELEE"

[node name="Range+" type="Button" parent="BgDimmer/ShopBox/VBoxContainer"]
margin_left = 7.0
margin_top = 94.0
margin_right = 252.0
margin_bottom = 184.0
rect_min_size = Vector2( 200, 75 )
size_flags_horizontal = 6
size_flags_vertical = 6
theme = ExtResource( 1 )
text = "INCREASE RANGED"

[node name="Health+" type="Button" parent="BgDimmer/ShopBox/VBoxContainer"]
margin_left = 7.0
margin_top = 188.0
margin_right = 252.0
margin_bottom = 278.0
rect_min_size = Vector2( 200, 75 )
size_flags_horizontal = 6
size_flags_vertical = 6
theme = ExtResource( 1 )
text = "INCREASE HEALTH"

[node name="Exit" type="Button" parent="BgDimmer/ShopBox/VBoxContainer"]
margin_left = 74.0
margin_top = 282.0
margin_right = 186.0
margin_bottom = 372.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 1 )
text = "EXIT"

[connection signal="pressed" from="BgDimmer/ShopBox/VBoxContainer/Melee+" to="." method="_on_Melee_pressed"]
[connection signal="pressed" from="BgDimmer/ShopBox/VBoxContainer/Range+" to="." method="_on_Range_pressed"]
[connection signal="pressed" from="BgDimmer/ShopBox/VBoxContainer/Health+" to="." method="_on_Health_pressed"]
[connection signal="pressed" from="BgDimmer/ShopBox/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
